--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -55,6 +55,21 @@ header {
       border: 1px solid #ddd;
       margin: 0.25rem;
       line-height: 75px;
+      text-transform: uppercase;
+      font-size: 2.5rem;
+      font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+      &.gray {
+        background-color: #aaa;
+        color: #fff;
+      }
+      &.green {
+        background-color: #4BB543;
+        color: #fff;
+      }
+      &.yellow {
+        background-color: #C9B458;
+        color: #fff;
+      }
     }
   }
 }
